@@ -4,8 +4,13 @@ import com.google.common.collect.ImmutableList;
 import galena.oreganized.Oreganized;
 import galena.oreganized.OreganizedConfig;
 import net.minecraft.core.Holder;
+import net.minecraft.core.HolderGetter;
 import net.minecraft.core.Registry;
+import net.minecraft.core.registries.Registries;
+import net.minecraft.data.worldgen.BootstapContext;
 import net.minecraft.data.worldgen.features.OreFeatures;
+import net.minecraft.data.worldgen.placement.OrePlacements;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.util.Mth;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.levelgen.VerticalAnchor;
@@ -15,6 +20,7 @@ import net.minecraft.world.level.levelgen.feature.OreFeature;
 import net.minecraft.world.level.levelgen.feature.configurations.FeatureConfiguration;
 import net.minecraft.world.level.levelgen.feature.configurations.OreConfiguration;
 import net.minecraft.world.level.levelgen.placement.*;
+import net.minecraft.world.level.levelgen.structure.templatesystem.TagMatchTest;
 import net.minecraftforge.registries.DeferredRegister;
 import net.minecraftforge.registries.ForgeRegistries;
 import net.minecraftforge.registries.RegistryObject;
@@ -22,73 +28,56 @@ import net.minecraftforge.registries.RegistryObject;
 import java.util.List;
 import java.util.function.Supplier;
 
+import static net.minecraft.tags.BlockTags.DEEPSLATE_ORE_REPLACEABLES;
+import static net.minecraft.tags.BlockTags.STONE_ORE_REPLACEABLES;
+
 public class OFeatures {
 
     public static final DeferredRegister<Feature<?>> FEATURES = DeferredRegister.create(ForgeRegistries.FEATURES, Oreganized.MOD_ID);
 
-    public static final RegistryObject<Feature<OreConfiguration>> SILVER_ORE_LOW = FEATURES.register("silver_ore", () -> new OreFeature(OreConfiguration.CODEC));
-    public static final RegistryObject<Feature<OreConfiguration>> SILVER_ORE_HIGH = FEATURES.register("silver_ore_high", () -> new OreFeature(OreConfiguration.CODEC));
+    public static final RegistryObject<Feature<OreConfiguration>> SILVER_ORE = FEATURES.register("silver_ore", () -> new OreFeature(OreConfiguration.CODEC));
+    public static final RegistryObject<Feature<OreConfiguration>> SILVER_ORE_EXTRA = FEATURES.register("silver_ore_extra", () -> new OreFeature(OreConfiguration.CODEC));
     public static final RegistryObject<Feature<OreConfiguration>> LEAD_ORE = FEATURES.register("lead_ore", () -> new OreFeature(OreConfiguration.CODEC));
     public static final RegistryObject<Feature<OreConfiguration>> LEAD_ORE_EXTRA = FEATURES.register("lead_ore_extra", () -> new OreFeature(OreConfiguration.CODEC));
 
     public static final class Configured {
 
-        public static final DeferredRegister<ConfiguredFeature<?, ?>> CONFIGURED_FEATURES = DeferredRegister.create(Registry.CONFIGURED_FEATURE_REGISTRY, Oreganized.MOD_ID);
 
-        public static final RegistryObject<ConfiguredFeature<OreConfiguration, ?>> SILVER_ORE_LOW = registerOre("silver_ore", OBlocks.SILVER_ORE, OBlocks.DEEPSLATE_SILVER_ORE, 3, 0.8F - Mth.clamp(OreganizedConfig.COMMON.silverHidden.get(), 0F, 0.8F));
-        public static final RegistryObject<ConfiguredFeature<OreConfiguration, ?>> SILVER_ORE_HIGH = registerOre("silver_ore_high", OBlocks.SILVER_ORE, OBlocks.DEEPSLATE_SILVER_ORE, 2, 1F - Mth.clamp(OreganizedConfig.COMMON.silverHidden.get(), 0F, 1F));
-        public static final RegistryObject<ConfiguredFeature<OreConfiguration, ?>> LEAD_ORE = registerOre("lead_ore", OBlocks.LEAD_ORE, OBlocks.DEEPSLATE_LEAD_ORE, OreganizedConfig.COMMON.leadClusterSize.get() / 2 + 1);
-        public static final RegistryObject<ConfiguredFeature<OreConfiguration, ?>> LEAD_ORE_EXTRA = registerOre("lead_ore_extra", OBlocks.LEAD_ORE, OBlocks.DEEPSLATE_LEAD_ORE, OreganizedConfig.COMMON.leadClusterSize.get());
+        public static final ResourceKey<ConfiguredFeature<?, ?>> SILVER_ORE = create("silver_ore");
+        public static final ResourceKey<ConfiguredFeature<?, ?>> SILVER_ORE_EXTRA = create("silver_ore_extra");
+        public static final ResourceKey<ConfiguredFeature<?, ?>> LEAD_ORE = create("lead_ore");
+        public static final ResourceKey<ConfiguredFeature<?, ?>> LEAD_ORE_EXTRA = create("lead_ore_extra");
 
-        private static <FC extends FeatureConfiguration, F extends Feature<FC>> RegistryObject<ConfiguredFeature<FC, ?>> register(String name, Supplier<ConfiguredFeature<FC, F>> feature) {
-            return CONFIGURED_FEATURES.register(name, feature);
+        public static ResourceKey<ConfiguredFeature<?, ?>> create(String name) {
+            return ResourceKey.create(Registries.CONFIGURED_FEATURE, Oreganized.modLoc(name));
         }
 
-        private static RegistryObject<ConfiguredFeature<OreConfiguration, ?>> registerOre(String name, Supplier<? extends Block> stoneOre, Supplier<? extends Block> deepslateOre, int size, float discardChanceOnAirExposure) {
-            return register(name, () -> new ConfiguredFeature<>(Feature.ORE, new OreConfiguration(List.of(OreConfiguration.target(OreFeatures.STONE_ORE_REPLACEABLES, stoneOre.get().defaultBlockState()),
-                    OreConfiguration.target(OreFeatures.DEEPSLATE_ORE_REPLACEABLES, deepslateOre.get().defaultBlockState())), size, discardChanceOnAirExposure)));
-        }
-
-        private static RegistryObject<ConfiguredFeature<OreConfiguration, ?>> registerOre(String name, Supplier<? extends Block> stoneOre, Supplier<? extends Block> deepslateOre, int size) {
-            return registerOre(name, stoneOre, deepslateOre, size, 0.0F);
+        public static void bootstrap(BootstapContext<ConfiguredFeature<?, ?>> context) {
+            context.register(SILVER_ORE, new ConfiguredFeature<>(Feature.ORE, new OreConfiguration(ImmutableList.of(OreConfiguration.target(new TagMatchTest(STONE_ORE_REPLACEABLES), OBlocks.SILVER_ORE.get().defaultBlockState()), OreConfiguration.target(new TagMatchTest(DEEPSLATE_ORE_REPLACEABLES), OBlocks.DEEPSLATE_SILVER_ORE.get().defaultBlockState())), 3, 0.8F)));
+            context.register(SILVER_ORE_EXTRA, new ConfiguredFeature<>(Feature.ORE, new OreConfiguration(ImmutableList.of(OreConfiguration.target(new TagMatchTest(STONE_ORE_REPLACEABLES), OBlocks.SILVER_ORE.get().defaultBlockState()), OreConfiguration.target(new TagMatchTest(DEEPSLATE_ORE_REPLACEABLES), OBlocks.DEEPSLATE_SILVER_ORE.get().defaultBlockState())), 2, 1F)));
+            context.register(LEAD_ORE, new ConfiguredFeature<>(Feature.ORE, new OreConfiguration(ImmutableList.of(OreConfiguration.target(new TagMatchTest(STONE_ORE_REPLACEABLES), OBlocks.LEAD_ORE.get().defaultBlockState()), OreConfiguration.target(new TagMatchTest(DEEPSLATE_ORE_REPLACEABLES), OBlocks.DEEPSLATE_LEAD_ORE.get().defaultBlockState())), 8)));
+            context.register(LEAD_ORE_EXTRA, new ConfiguredFeature<>(Feature.ORE, new OreConfiguration(ImmutableList.of(OreConfiguration.target(new TagMatchTest(STONE_ORE_REPLACEABLES), OBlocks.LEAD_ORE.get().defaultBlockState()), OreConfiguration.target(new TagMatchTest(DEEPSLATE_ORE_REPLACEABLES), OBlocks.DEEPSLATE_LEAD_ORE.get().defaultBlockState())), 8)));
         }
     }
 
     public static final class Placed {
-        public static final DeferredRegister<PlacedFeature> PLACED_FEATURES = DeferredRegister.create(Registry.PLACED_FEATURE_REGISTRY, Oreganized.MOD_ID);
 
-        public static final RegistryObject<PlacedFeature> SILVER_ORE_LOW = register("silver_ore", Configured.SILVER_ORE_LOW,
-                CountPlacement.of(OreganizedConfig.COMMON.silverFrequency.get()),
-                InSquarePlacement.spread(),
-                BiomeFilter.biome(),
-                HeightRangePlacement.triangle(VerticalAnchor.absolute(OreganizedConfig.COMMON.silverMinHeight.get()), VerticalAnchor.absolute(OreganizedConfig.COMMON.silverMaxHeight.get()))
-        );
-        public static final RegistryObject<PlacedFeature> SILVER_ORE_HIGH = register("silver_ore_high", Configured.SILVER_ORE_HIGH,
-                CountPlacement.of(OreganizedConfig.COMMON.silverFrequency.get()),
-                InSquarePlacement.spread(),
-                BiomeFilter.biome(),
-                HeightRangePlacement.uniform(VerticalAnchor.absolute(140), VerticalAnchor.absolute(160))
-        );
-        public static final RegistryObject<PlacedFeature> LEAD_ORE = register("lead_ore", Configured.LEAD_ORE,
-                CountPlacement.of(OreganizedConfig.COMMON.leadFrequency.get()),
-                InSquarePlacement.spread(),
-                BiomeFilter.biome(),
-                HeightRangePlacement.triangle(VerticalAnchor.absolute(OreganizedConfig.COMMON.leadMinHeight.get()), VerticalAnchor.absolute(OreganizedConfig.COMMON.leadMaxHeight.get()))
-        );
-        public static final RegistryObject<PlacedFeature> LEAD_ORE_EXTRA = register("lead_ore_extra", Configured.LEAD_ORE_EXTRA,
-                CountPlacement.of(OreganizedConfig.COMMON.leadFrequency.get()),
-                InSquarePlacement.spread(),
-                BiomeFilter.biome(),
-                HeightRangePlacement.triangle(VerticalAnchor.absolute(50), VerticalAnchor.absolute(80))
-        );
 
-        private static RegistryObject<PlacedFeature> register(String name, RegistryObject<? extends ConfiguredFeature<?, ?>> feature, PlacementModifier... placementModifiers) {
-            return register(name, feature, List.of(placementModifiers));
+        public static final ResourceKey<PlacedFeature> SILVER_ORE = create("silver_ore");
+        public static final ResourceKey<PlacedFeature> SILVER_ORE_EXTRA = create("silver_ore_extra");
+        public static final ResourceKey<PlacedFeature> LEAD_ORE = create("lead_ore");
+        public static final ResourceKey<PlacedFeature> LEAD_ORE_EXTRA = create("lead_ore_extra");
+
+        public static ResourceKey<PlacedFeature> create(String name) {
+            return ResourceKey.create(Registries.PLACED_FEATURE, Oreganized.modLoc(name));
         }
+        public static void bootstrap(BootstapContext<PlacedFeature> context) {
+            HolderGetter<ConfiguredFeature<?, ?>> features = context.lookup(Registries.CONFIGURED_FEATURE);
 
-        @SuppressWarnings("unchecked")
-        private static RegistryObject<PlacedFeature> register(String name, RegistryObject<? extends ConfiguredFeature<?, ?>> feature, List<PlacementModifier> placementModifiers) {
-            return PLACED_FEATURES.register(name, () -> new PlacedFeature((Holder<ConfiguredFeature<?, ?>>) feature.getHolder().get(), ImmutableList.copyOf(placementModifiers)));
+            context.register(SILVER_ORE, new PlacedFeature(features.getOrThrow(Configured.SILVER_ORE), OrePlacements.commonOrePlacement(5, HeightRangePlacement.uniform(VerticalAnchor.absolute(-15), VerticalAnchor.absolute(5)))));
+            context.register(SILVER_ORE_EXTRA, new PlacedFeature(features.getOrThrow(Configured.SILVER_ORE), OrePlacements.commonOrePlacement(5, HeightRangePlacement.uniform(VerticalAnchor.absolute(140), VerticalAnchor.absolute(160)))));
+            context.register(LEAD_ORE, new PlacedFeature(features.getOrThrow(Configured.LEAD_ORE), OrePlacements.commonOrePlacement(10, HeightRangePlacement.uniform(VerticalAnchor.absolute(-40), VerticalAnchor.absolute(-20)))));
+            context.register(LEAD_ORE_EXTRA, new PlacedFeature(features.getOrThrow(Configured.LEAD_ORE), OrePlacements.commonOrePlacement(10, HeightRangePlacement.uniform(VerticalAnchor.absolute(50), VerticalAnchor.absolute(80)))));
         }
     }
 }
